--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-- name: Checkmarx AST Github Action
+            - name: Checkmarx AST Github Action
   # You may pin to the exact commit or the version.
   # uses: Checkmarx/ast-github-action@72d549beebd0bc5bbafa559f198161b6ce7c03df
   uses: Checkmarx/ast-github-action@2.0.21
@@ -10,7 +10,7 @@
     # Client ID for AST portal authentication
     cx_client_id: SECRET
     # Secret key for AST portal authentication
-    cx_client_secret: SECREt
+    cx_client_secret: SECRET
     # Select a Checkmarx Project Name
     project_name: # optional, default is ${{ github.repository }}
     # Branch name
@@ -25,4 +25,3 @@
     namespace: # optional, default is ${{ github.repository_owner }}
     # Pr Number of the pull request that needs the decoration
     pr_number: # optional, default is ${{ github.event.number }}
-          
